ztd-method/ui/struct_skip_all_accessor.stderr
error[E0599]: no method named `first` found for struct `StructSkipAllAccessor` in the current scope
  --> ui/struct_skip_all_accessor.rs:21:14
   |
7  | struct StructSkipAllAccessor {
   | ---------------------------- method `first` not found for this struct
...
21 |     instance.first();
   |              ^^^^^-- help: remove the arguments
   |              |
   |              field, not a method
